--- a/index.html
+++ b/index.html
@@ -20,18 +20,12 @@
     </header>
 
     <main>
-        <h1>Neuseelandreise</h1>
-        <h2>Napier City</h2>
-        <p>Napier [ˈneɪpɪər], offizielle Bezeichnung: <strong>Napier City</strong>, oft auch <strong>City of Napier</strong> genannt, auf Maori Ahuriri,
-            ist eine Hafenstadt und eine eigenständige Territorial Authority (Gebietskörperschaft) auf der Nordinsel von Neuseeland.
-            In ihr befindet sich der Hawke’s Bay Regional Council und die Verwaltung für die Region Hawke’s Bay.
-            Der Rat der Stadt Napier wird <em>Napier City Council</em> bezeichnet. Zusammen mit der rund zehn Kilometer südlich
-            gelegenen Stadt <em>Hastings</em> bilden beide Städte den fünftgrößten Ballungsraum Neuseelands,
-            der im Englischen oft als „<strong><em>the Twin Cities</em></strong>“ bezeichnet wird.</p>
-        <p>Im Februar 1854 machte <em>Alfred Domett</em>, der seinerzeit Magistrat der Provinz Hawke’s Bay war, den Vorschlag,
-            die neu gegründete Stadt nach dem britischen General <em>Charles James Napier</em> zu benennen und entsprechend andere Ort der Region
-            ebenfalls nach prominenten Persönlichkeiten, die sich um die Britische Ostindien-Kompanie verdient gemacht haben.</p>
-        <a href="https://de.wikipedia.org/wiki/Napier_(Neuseeland)">Quelle: Wikipedia</a>
+        <h1>Weltreise</h1>
+        <h2>Istanbul</h2>
+        <p>Istanbul (türkisch İstanbulⓘ/? [isˈtanbuɫ], von altgriechisch εἰς τὴν πόλιν eis tḕn pólin, „in die Stadt“: siehe unten), früher Byzantion (Byzanz) und Konstantinopel, ist die bevölkerungsreichste Stadt der Türkei und deren Zentrum für Kultur, Handel, Finanzen und Medien. Mit rund 15,5 Millionen Einwohnern nahm die Metropolregion 2019 den 15.[2] Platz unter den größten Metropolregionen der Welt ein. Mit jährlich über 14 Millionen Touristen aus dem Ausland ist Istanbul überdies die Stadt mit der achtgrößten Besucherzahl der Welt.[3] Die Stadt liegt am Nordufer des Marmarameeres auf beiden Seiten des Bosporus, also sowohl im europäischen Thrakien als auch im asiatischen Anatolien. Aufgrund ihrer weltweit einzigartigen Transitlage zwischen zwei Kontinenten und zwei Meeresgebieten, dem Schwarzen Meer und dem Mittelmeer, verzeichnet sie einen bedeutenden Schiffsverkehr und verfügt über zwei große Flughäfen, zentrale Eisenbahn-Fernbahnhöfe und zwei Fernbusbahnhöfe. Das Projekt Marmaray, ein Eisenbahntunnel unter dem Bosporus, verbindet beide Kontinente. Istanbul ist daher einer der wichtigsten Knotenpunkte für Verkehr und Logistik auf internationaler wie nationaler Ebene.</p>
+        <p>Im Jahr 660 v. Chr. unter dem Namen Byzantion gegründet, kann die Stadt auf eine 2700-jährige Geschichte zurückblicken. Fast 1600 Jahre lang diente sie nacheinander dem Römischen, dem Byzantinischen und dem Osmanischen Reich als Hauptstadt. Als Sitz des ökumenischen Patriarchen und – bis 1924 – des osmanischen Kalifats war Istanbul zudem jahrhundertelang ein bedeutendes Zentrum des orthodoxen Christentums und des sunnitischen Islams. </p>
+        <p>Das Stadtbild ist von Bauten der griechisch-römischen Antike, des mittelalterlichen Byzanz sowie der neuzeitlichen und modernen Türkei geprägt. Paläste gehören ebenso dazu wie zahlreiche Moscheen, Cemevleri, Kirchen und Synagogen. Aufgrund ihrer Einzigartigkeit wurden Teile der historischen Altstadt von der UNESCO zum Weltkulturerbe erklärt. 2010 war Istanbul Kulturhauptstadt Europas.</p>
+        <a href="https://de.wikipedia.org/wiki/Istanbul">Quelle: Wikipedia</a>
         <figure>
             <img src="images/attraction.jpg" alt="Blick auf Meer">
             <!-- Bild von https://pixabay.com/de/photos/neuseeland-napier-bluff-hill-lookout-3679340/ -->
