--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Weltreise</title>
+    <title>Lieblingsort der Webmapper:innen</title>
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" integrity="sha256-p4NxAoJBhIIN+hmNHrzRCf9tD/miZyoHS5obTRR9BMY=" crossorigin="" />
     <!-- Make sure you put this AFTER Leaflet's CSS -->
     <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js" integrity="sha256-20nQCchB9co0qIjJZRGuk2/Z9VM+kNiyxNV1lvTlZBo=" crossorigin=""></script>
@@ -20,7 +20,7 @@
     </header>
 
     <main>
-        <h1>Weltreise</h1>
+        <h1>Lieblingsort der Webmapper:innen</h1>
         <h2>Istanbul</h2>
         <p><strong>Istanbul</strong>, früher <em>Byzantion (Byzanz)</em> und Konstantinopel, ist die bevölkerungsreichste Stadt der Türkei und deren Zentrum für Kultur, Handel, Finanzen und Medien. Mit rund 15,5 Millionen Einwohnern nahm die Metropolregion 2019 den 15.[2] Platz unter den größten Metropolregionen der Welt ein. Mit jährlich über 14 Millionen Touristen aus dem Ausland ist Istanbul überdies die Stadt mit der achtgrößten Besucherzahl der Welt.[3] Die Stadt liegt am Nordufer des Marmarameeres auf beiden Seiten des Bosporus, also sowohl im europäischen Thrakien als auch im asiatischen Anatolien. Aufgrund ihrer weltweit einzigartigen Transitlage zwischen zwei Kontinenten und zwei Meeresgebieten, dem Schwarzen Meer und dem Mittelmeer, verzeichnet sie einen bedeutenden Schiffsverkehr und verfügt über zwei große Flughäfen, zentrale Eisenbahn-Fernbahnhöfe und zwei Fernbusbahnhöfe. Das Projekt Marmaray, ein Eisenbahntunnel unter dem Bosporus, verbindet beide Kontinente. Istanbul ist daher einer der wichtigsten Knotenpunkte für Verkehr und Logistik auf internationaler wie nationaler Ebene.</p>
         <p>Im Jahr 660 v. Chr. unter dem Namen Byzantion gegründet, kann die Stadt auf eine 2700-jährige Geschichte zurückblicken. Fast 1600 Jahre lang diente sie nacheinander dem Römischen, dem Byzantinischen und dem Osmanischen Reich als Hauptstadt. Als Sitz des ökumenischen Patriarchen und – bis 1924 – des osmanischen Kalifats war Istanbul zudem jahrhundertelang ein bedeutendes Zentrum des orthodoxen Christentums und des sunnitischen Islams. </p>
