Namen der BIlddatei geändert

--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
     <header>
         <figure>
             <!--Quelle: https://pixabay.com/de/photos/jungfrauenturm-sonnenuntergang-7058791/-->
-            <img src="images/istanbul_header.jpg" alt="Header Bild">
-            <a href="https://github.com/sam-uze"><img src="images/cluster-Bluete.jpg" alt="Eine Blume" /></a>
+            <img src="images/header.jpg" alt="Header Bild">
+            <a href="https://github.com/sam-uze"><img src="images/user.jpg" alt="Eine Blume" /></a>
         </figure>
     </header>
 
@@ -27,7 +27,7 @@
         <p>Das Stadtbild ist von Bauten der griechisch-römischen Antike, des mittelalterlichen Byzanz sowie der neuzeitlichen und modernen Türkei geprägt. Paläste gehören ebenso dazu wie zahlreiche Moscheen, Cemevleri, Kirchen und Synagogen. Aufgrund ihrer Einzigartigkeit wurden Teile der historischen Altstadt von der UNESCO zum Weltkulturerbe erklärt. 2010 war Istanbul Kulturhauptstadt Europas.</p>
         <a href="https://de.wikipedia.org/wiki/Istanbul">Quelle: Wikipedia</a>
         <figure>
-            <img src="images/istanbul-attraction.jpg" alt="Blick auf Istanbul">
+            <img src="images/attraction.jpg" alt="Blick auf Istanbul">
             <!-- Bild von https://pixabay.com/de/photos/istanbul-galata-turm-stadt-truthahn-4307665/ -->
             <figcaption>Blick auf Istanbul (Quelle: <a href="https://pixabay.com/de/photos/istanbul-galata-turm-stadt-truthahn-4307665/">Pixabay</a>)</figcaption>
         </figure>
