<article> Element hinzugefügt

--- a/index.html
+++ b/index.html
@@ -20,26 +20,26 @@
     </header>
 
     <main>
-        <h1>Lieblingsort der Webmapper:innen</h1>
-        <h2>Istanbul</h2>
-        <p><strong>Istanbul</strong>, früher <em>Byzantion (Byzanz)</em> und Konstantinopel, ist die bevölkerungsreichste Stadt der Türkei und deren Zentrum für Kultur, Handel, Finanzen und Medien. Mit rund 15,5 Millionen Einwohnern nahm die Metropolregion 2019 den 15.[2] Platz unter den größten Metropolregionen der Welt ein. Mit jährlich über 14 Millionen Touristen aus dem Ausland ist Istanbul überdies die Stadt mit der achtgrößten Besucherzahl der Welt.[3] Die Stadt liegt am Nordufer des Marmarameeres auf beiden Seiten des Bosporus, also sowohl im europäischen Thrakien als auch im asiatischen Anatolien. Aufgrund ihrer weltweit einzigartigen Transitlage zwischen zwei Kontinenten und zwei Meeresgebieten, dem Schwarzen Meer und dem Mittelmeer, verzeichnet sie einen bedeutenden Schiffsverkehr und verfügt über zwei große Flughäfen, zentrale Eisenbahn-Fernbahnhöfe und zwei Fernbusbahnhöfe. Das Projekt Marmaray, ein Eisenbahntunnel unter dem Bosporus, verbindet beide Kontinente. Istanbul ist daher einer der wichtigsten Knotenpunkte für Verkehr und Logistik auf internationaler wie nationaler Ebene.</p>
-        <p>Im Jahr 660 v. Chr. unter dem Namen Byzantion gegründet, kann die Stadt auf eine 2700-jährige Geschichte zurückblicken. Fast 1600 Jahre lang diente sie nacheinander dem Römischen, dem Byzantinischen und dem Osmanischen Reich als Hauptstadt. Als Sitz des ökumenischen Patriarchen und – bis 1924 – des osmanischen Kalifats war Istanbul zudem jahrhundertelang ein bedeutendes Zentrum des orthodoxen Christentums und des sunnitischen Islams. </p>
-        <p>Das Stadtbild ist von Bauten der griechisch-römischen Antike, des mittelalterlichen Byzanz sowie der neuzeitlichen und modernen Türkei geprägt. Paläste gehören ebenso dazu wie zahlreiche Moscheen, Cemevleri, Kirchen und Synagogen. Aufgrund ihrer Einzigartigkeit wurden Teile der historischen Altstadt von der UNESCO zum Weltkulturerbe erklärt. 2010 war Istanbul Kulturhauptstadt Europas.</p>
-        <a href="https://de.wikipedia.org/wiki/Istanbul">Quelle: Wikipedia</a>
-        <figure>
-            <img src="images/attraction.jpg" alt="Blick auf Istanbul">
-            <!-- Bild von https://pixabay.com/de/photos/istanbul-galata-turm-stadt-truthahn-4307665/ -->
-            <figcaption>Blick auf Istanbul (Quelle: <a href="https://pixabay.com/de/photos/istanbul-galata-turm-stadt-truthahn-4307665/">Pixabay</a>)</figcaption>
-        </figure>
-
-        <h3>Übersichtskarte</h3>
-        <div id="map" style="width: 900px;height: 600px; border: 1px solid silver;"></div>
-
-        <h3>Links</h3>
-        <ul>
-            <li><a href="https://istanbul-tourist-information.com/">Website der Tourist Information Istanbul</a></li>
-            <li><a href="https://www.wetter.com/wetter_aktuell/wettervorhersage/16_tagesvorhersage/tuerkei/istanbul/TR0IB0001.html">Wetter Istanbul</a></li>
-        </ul>
+        <article>
+            <h1>Lieblingsort der Webmapper:innen</h1>
+            <h2>Istanbul</h2>
+            <p><strong>Istanbul</strong>, früher <em>Byzantion (Byzanz)</em> und Konstantinopel, ist die bevölkerungsreichste Stadt der Türkei und deren Zentrum für Kultur, Handel, Finanzen und Medien. Mit rund 15,5 Millionen Einwohnern nahm die Metropolregion 2019 den 15.[2] Platz unter den größten Metropolregionen der Welt ein. Mit jährlich über 14 Millionen Touristen aus dem Ausland ist Istanbul überdies die Stadt mit der achtgrößten Besucherzahl der Welt.[3] Die Stadt liegt am Nordufer des Marmarameeres auf beiden Seiten des Bosporus, also sowohl im europäischen Thrakien als auch im asiatischen Anatolien. Aufgrund ihrer weltweit einzigartigen Transitlage zwischen zwei Kontinenten und zwei Meeresgebieten, dem Schwarzen Meer und dem Mittelmeer, verzeichnet sie einen bedeutenden Schiffsverkehr und verfügt über zwei große Flughäfen, zentrale Eisenbahn-Fernbahnhöfe und zwei Fernbusbahnhöfe. Das Projekt Marmaray, ein Eisenbahntunnel unter dem Bosporus, verbindet beide Kontinente. Istanbul ist daher einer der wichtigsten Knotenpunkte für Verkehr und Logistik auf internationaler wie nationaler Ebene.</p>
+            <p>Im Jahr 660 v. Chr. unter dem Namen Byzantion gegründet, kann die Stadt auf eine 2700-jährige Geschichte zurückblicken. Fast 1600 Jahre lang diente sie nacheinander dem Römischen, dem Byzantinischen und dem Osmanischen Reich als Hauptstadt. Als Sitz des ökumenischen Patriarchen und – bis 1924 – des osmanischen Kalifats war Istanbul zudem jahrhundertelang ein bedeutendes Zentrum des orthodoxen Christentums und des sunnitischen Islams. </p>
+            <p>Das Stadtbild ist von Bauten der griechisch-römischen Antike, des mittelalterlichen Byzanz sowie der neuzeitlichen und modernen Türkei geprägt. Paläste gehören ebenso dazu wie zahlreiche Moscheen, Cemevleri, Kirchen und Synagogen. Aufgrund ihrer Einzigartigkeit wurden Teile der historischen Altstadt von der UNESCO zum Weltkulturerbe erklärt. 2010 war Istanbul Kulturhauptstadt Europas.</p>
+            <a href="https://de.wikipedia.org/wiki/Istanbul">Quelle: Wikipedia</a>
+            <figure>
+                <img src="images/attraction.jpg" alt="Blick auf Istanbul">
+                <!-- Bild von https://pixabay.com/de/photos/istanbul-galata-turm-stadt-truthahn-4307665/ -->
+                <figcaption>Blick auf Istanbul (Quelle: <a href="https://pixabay.com/de/photos/istanbul-galata-turm-stadt-truthahn-4307665/">Pixabay</a>)</figcaption>
+            </figure>
+            <h3>Übersichtskarte</h3>
+            <div id="map" style="width: 900px;height: 600px; border: 1px solid silver;"></div>
+            <h3>Links</h3>
+            <ul>
+                <li><a href="https://istanbul-tourist-information.com/">Website der Tourist Information Istanbul</a></li>
+                <li><a href="https://www.wetter.com/wetter_aktuell/wettervorhersage/16_tagesvorhersage/tuerkei/istanbul/TR0IB0001.html">Wetter Istanbul</a></li>
+            </ul>
+        </article>
     </main>
 
     <footer>
