Enhance index.html with Font Awesome icons for improved navigation and image caption

--- a/index.html
+++ b/index.html
@@ -34,11 +34,11 @@
             <figure>
                 <img src="images/attraction.jpg" alt="Blick auf Istanbul">
                 <!-- Bild von https://pixabay.com/de/photos/istanbul-galata-turm-stadt-truthahn-4307665/ -->
-                <figcaption>Blick auf Istanbul (Quelle: <a href="https://pixabay.com/de/photos/istanbul-galata-turm-stadt-truthahn-4307665/">Pixabay</a>)</figcaption>
+                <figcaption><i class="fa-solid fa-camera-retro"></i>Blick auf Istanbul (Quelle: <a href="https://pixabay.com/de/photos/istanbul-galata-turm-stadt-truthahn-4307665/">Pixabay</a>)</figcaption>
             </figure>
             <h3>Übersichtskarte</h3>
-            <div id="map" style="width: 900px;height: 600px; border: 1px solid silver;"></div>
-            <h3>Links</h3>
+            <div id="map"></div>
+            <h3><i class="fa-solid fa-link"></i>Links</h3>
             <ul>
                 <li><a href="https://istanbul-tourist-information.com/">Website der Tourist Information Istanbul</a></li>
                 <li><a href="https://www.wetter.com/wetter_aktuell/wettervorhersage/16_tagesvorhersage/tuerkei/istanbul/TR0IB0001.html">Wetter Istanbul</a></li>
@@ -48,9 +48,9 @@
 
     <footer>
         <nav>
-            <a href="https://johannauniibk.github.io/top/">vorhergehende Etappe</a>
-            <a href="https://sam-uze.github.io/top/">diese Etappe</a>
-            <a href="https://webmapping.github.io/top/">nächste Etappe</a>
+            <a href="https://johannauniibk.github.io/top/"><i class="fa-solid fa-arrow-left"></i>vorhergehende Etappe</a>
+            <a href="https://sam-uze.github.io/top/"><i class="fa-solid fa-house"></i>diese Etappe</a>
+            <a href="https://webmapping.github.io/top/">nächste Etappe<i class="fa-solid fa-arrow-right"></i></a>
         </nav>
     </footer>
 
