Add Font Awesome icons to section headings in index.html for better visual appeal

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                 <!-- Bild von https://pixabay.com/de/photos/istanbul-galata-turm-stadt-truthahn-4307665/ -->
                 <figcaption><i class="fa-solid fa-camera-retro"></i>Blick auf Istanbul (Quelle: <a href="https://pixabay.com/de/photos/istanbul-galata-turm-stadt-truthahn-4307665/">Pixabay</a>)</figcaption>
             </figure>
-            <h3>Übersichtskarte</h3>
+            <h3><i class="fa-solid fa-map"></i>Übersichtskarte</h3>
             <div id="map"></div>
             <h3><i class="fa-solid fa-link"></i>Links</h3>
             <ul>
