--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
             <div id ="pulldown">
                 <select>
                 </select>
+            </div>
             <h3><i class="fa-solid fa-link"></i>Links</h3>
             <ul>
                 <li><a href="https://istanbul-tourist-information.com/">Website der Tourist Information Istanbul</a></li>
